syntax = "proto3";

package user;

service UserService {
  rpc register (UserRegisterRequest) returns (UserRegisterResponse) {}
  rpc login (UserLoginRequest) returns (UserLoginResponse) {}
  rpc makeFriend (MakeFriendRequest) returns (MakeFriendResponse) {}
}

message UserRegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message UserRegisterResponse {
  string id = 1;
  string email = 2;
  string username = 3;
}

message UserLoginRequest {
  string email = 1;
  string password = 2;
}

message UserLoginResponse {
  string id = 1;
  string email = 2;
  string username = 3;
  string token = 4;
}

message MakeFriendRequest {
  string senderName = 1;
  string friendEmail = 2;
}

message MakeFriendResponse {
  string status = 1;
}